syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "rpc_user.proto";

package pb;

option go_package = "github.com/escalopa/gobank/pb";

message LoginRequest {
  string Username = 1;
  string Password = 2;
}

message LoginResponse {
  string session_id = 1;
  string access_token = 2;
  string refresh_token = 3;
  google.protobuf.Timestamp access_token_expires_at = 4;
  google.protobuf.Timestamp refresh_token_expires_at = 5;
  UserResponse user = 6;
}

message LogoutRequest { string username = 1; }

message LogoutResponse { string username = 1; }